--- a/networking/Base.lproj/Main.storyboard
+++ b/networking/Base.lproj/Main.storyboard
@@ -103,7 +103,8 @@
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                 <state key="normal" title="Start search"/>
                                 <connections>
-                                    <action selector="StartSearch:" destination="o7K-JG-BQG" eventType="touchUpInside" id="40U-6j-7sO"/>
+                                    <action selector="startSearch:" destination="o7K-JG-BQG" eventType="touchUpInside" id="40U-6j-7sO"/>
+                                    <segue destination="rmI-NW-EuD" kind="show" id="CLH-k3-IZt"/>
                                 </connections>
                             </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Zve-QQ-GLp">
@@ -183,6 +184,81 @@
             </objects>
             <point key="canvasLocation" x="1676.8115942028987" y="79.891304347826093"/>
         </scene>
+        <!--Repositories-->
+        <scene sceneID="PYW-Ek-Bqb">
+            <objects>
+                <viewController id="rmI-NW-EuD" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5EQ-g7-FtZ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9VP-gB-la2">
+                                <rect key="frame" x="0.0" y="93" width="414" height="643"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="137" id="lDY-pH-BRU">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="137"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lDY-pH-BRU" translatesAutoresizingMaskIntoConstraints="NO" id="q8j-VI-X9X">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="137"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="78O-Bo-NUu">
+                                                    <rect key="frame" x="310" y="8" width="96" height="89"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="owner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4up-FF-uH2">
+                                                    <rect key="frame" x="310" y="105" width="96" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xao-e2-1kD">
+                                                    <rect key="frame" x="8" y="8" width="294" height="33"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aVV-12-EYP">
+                                                    <rect key="frame" x="8" y="49" width="294" height="80"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="4up-FF-uH2" secondAttribute="bottom" constant="8" id="7hI-eO-VIo"/>
+                                                <constraint firstItem="aVV-12-EYP" firstAttribute="leading" secondItem="q8j-VI-X9X" secondAttribute="leading" constant="8" id="HCm-oI-JOI"/>
+                                                <constraint firstItem="aVV-12-EYP" firstAttribute="top" secondItem="Xao-e2-1kD" secondAttribute="bottom" constant="8" id="Jk7-3s-lg7"/>
+                                                <constraint firstItem="78O-Bo-NUu" firstAttribute="top" secondItem="q8j-VI-X9X" secondAttribute="top" constant="8" id="LUT-bK-6Zg"/>
+                                                <constraint firstItem="Xao-e2-1kD" firstAttribute="leading" secondItem="q8j-VI-X9X" secondAttribute="leading" constant="8" id="OQg-w1-B8E"/>
+                                                <constraint firstItem="4up-FF-uH2" firstAttribute="leading" secondItem="aVV-12-EYP" secondAttribute="trailing" constant="8" id="YxB-Vq-ajy"/>
+                                                <constraint firstItem="78O-Bo-NUu" firstAttribute="trailing" secondItem="Xao-e2-1kD" secondAttribute="trailing" id="d25-Bi-vE8"/>
+                                                <constraint firstAttribute="bottom" secondItem="aVV-12-EYP" secondAttribute="bottom" constant="8" id="kKU-1B-S6w"/>
+                                                <constraint firstAttribute="trailing" secondItem="78O-Bo-NUu" secondAttribute="trailing" constant="8" id="lO9-JL-PU4"/>
+                                                <constraint firstItem="Xao-e2-1kD" firstAttribute="top" secondItem="q8j-VI-X9X" secondAttribute="top" constant="8" id="pdP-OA-P6a"/>
+                                                <constraint firstAttribute="trailing" secondItem="4up-FF-uH2" secondAttribute="trailing" constant="8" id="ufn-IN-4ZG"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NsN-JY-buE">
+                                <rect key="frame" x="0.0" y="44" width="414" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="pDx-0q-2Lg"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Repositories" id="7sq-GP-kTW"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PnI-ty-2Mx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2492.753623188406" y="79.891304347826093"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="8Ea-j5-l1W">
             <objects>
@@ -204,6 +280,9 @@
     </scenes>
     <resources>
         <image name="not-found" width="1024" height="1024"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
