--- a/networking/Base.lproj/Main.storyboard
+++ b/networking/Base.lproj/Main.storyboard
@@ -110,7 +110,7 @@
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Zve-QQ-GLp">
                                 <rect key="frame" x="119.66666666666669" y="450" width="175" height="32"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="175" id="Kvs-sR-vfq"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="175" id="Kvs-sR-vfq"/>
                                 </constraints>
                                 <segments>
                                     <segment title="ascended"/>
@@ -187,73 +187,110 @@
         <!--Repositories-->
         <scene sceneID="PYW-Ek-Bqb">
             <objects>
-                <viewController id="rmI-NW-EuD" sceneMemberID="viewController">
+                <viewController id="rmI-NW-EuD" customClass="RepositoriesViewController" customModule="networking" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EQ-g7-FtZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9VP-gB-la2">
-                                <rect key="frame" x="0.0" y="93" width="414" height="643"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9VP-gB-la2">
+                                <rect key="frame" x="0.0" y="78" width="414" height="658"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="137" id="lDY-pH-BRU">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="137" id="lDY-pH-BRU" customClass="RepositoriesTableViewCell" customModule="networking" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="137"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lDY-pH-BRU" translatesAutoresizingMaskIntoConstraints="NO" id="q8j-VI-X9X">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lDY-pH-BRU" id="q8j-VI-X9X">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="137"/>
+                                            <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="78O-Bo-NUu">
-                                                    <rect key="frame" x="310" y="8" width="96" height="89"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="not-found" translatesAutoresizingMaskIntoConstraints="NO" id="78O-Bo-NUu">
+                                                    <rect key="frame" x="309" y="8" width="92" height="92"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="92" id="RXN-mc-Jcx"/>
+                                                        <constraint firstAttribute="width" constant="92" id="eek-Rt-Qas"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="owner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4up-FF-uH2">
-                                                    <rect key="frame" x="310" y="105" width="96" height="24"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xao-e2-1kD">
+                                                    <rect key="frame" x="8" y="8" width="293" height="33"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="33" id="Q4L-uo-nIA"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xao-e2-1kD">
-                                                    <rect key="frame" x="8" y="8" width="294" height="33"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aVV-12-EYP">
+                                                    <rect key="frame" x="8" y="49" width="293" height="80"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aVV-12-EYP">
-                                                    <rect key="frame" x="8" y="49" width="294" height="80"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="owner" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4up-FF-uH2">
+                                                    <rect key="frame" x="309" y="108" width="92" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="92" id="s4U-Ae-rql"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="4up-FF-uH2" secondAttribute="bottom" constant="8" id="7hI-eO-VIo"/>
-                                                <constraint firstItem="aVV-12-EYP" firstAttribute="leading" secondItem="q8j-VI-X9X" secondAttribute="leading" constant="8" id="HCm-oI-JOI"/>
-                                                <constraint firstItem="aVV-12-EYP" firstAttribute="top" secondItem="Xao-e2-1kD" secondAttribute="bottom" constant="8" id="Jk7-3s-lg7"/>
-                                                <constraint firstItem="78O-Bo-NUu" firstAttribute="top" secondItem="q8j-VI-X9X" secondAttribute="top" constant="8" id="LUT-bK-6Zg"/>
-                                                <constraint firstItem="Xao-e2-1kD" firstAttribute="leading" secondItem="q8j-VI-X9X" secondAttribute="leading" constant="8" id="OQg-w1-B8E"/>
-                                                <constraint firstItem="4up-FF-uH2" firstAttribute="leading" secondItem="aVV-12-EYP" secondAttribute="trailing" constant="8" id="YxB-Vq-ajy"/>
-                                                <constraint firstItem="78O-Bo-NUu" firstAttribute="trailing" secondItem="Xao-e2-1kD" secondAttribute="trailing" id="d25-Bi-vE8"/>
-                                                <constraint firstAttribute="bottom" secondItem="aVV-12-EYP" secondAttribute="bottom" constant="8" id="kKU-1B-S6w"/>
-                                                <constraint firstAttribute="trailing" secondItem="78O-Bo-NUu" secondAttribute="trailing" constant="8" id="lO9-JL-PU4"/>
-                                                <constraint firstItem="Xao-e2-1kD" firstAttribute="top" secondItem="q8j-VI-X9X" secondAttribute="top" constant="8" id="pdP-OA-P6a"/>
-                                                <constraint firstAttribute="trailing" secondItem="4up-FF-uH2" secondAttribute="trailing" constant="8" id="ufn-IN-4ZG"/>
+                                                <constraint firstAttribute="bottom" secondItem="aVV-12-EYP" secondAttribute="bottom" constant="8" id="Lve-Ma-EeN"/>
+                                                <constraint firstItem="78O-Bo-NUu" firstAttribute="top" secondItem="q8j-VI-X9X" secondAttribute="top" constant="8" id="Rge-UG-CBy"/>
+                                                <constraint firstItem="4up-FF-uH2" firstAttribute="top" secondItem="78O-Bo-NUu" secondAttribute="bottom" constant="8" id="TCF-cf-KIB"/>
+                                                <constraint firstItem="Xao-e2-1kD" firstAttribute="top" secondItem="q8j-VI-X9X" secondAttribute="top" constant="8" id="b46-PQ-4Gx"/>
+                                                <constraint firstItem="aVV-12-EYP" firstAttribute="top" secondItem="Xao-e2-1kD" secondAttribute="bottom" constant="8" id="gsK-nn-Stb"/>
+                                                <constraint firstItem="aVV-12-EYP" firstAttribute="leading" secondItem="q8j-VI-X9X" secondAttribute="leading" constant="8" id="hFv-zZ-hEL"/>
+                                                <constraint firstAttribute="trailing" secondItem="78O-Bo-NUu" secondAttribute="trailing" constant="13" id="i2z-wl-STS"/>
+                                                <constraint firstAttribute="trailing" secondItem="4up-FF-uH2" secondAttribute="trailing" constant="13" id="iFG-q9-ehZ"/>
+                                                <constraint firstAttribute="bottom" secondItem="4up-FF-uH2" secondAttribute="bottom" constant="8" id="qlQ-8x-YnK"/>
+                                                <constraint firstItem="Xao-e2-1kD" firstAttribute="leading" secondItem="q8j-VI-X9X" secondAttribute="leading" constant="8" id="s7w-IB-tMv"/>
+                                                <constraint firstItem="78O-Bo-NUu" firstAttribute="leading" secondItem="aVV-12-EYP" secondAttribute="trailing" constant="8" id="z2s-Gc-vlg"/>
+                                                <constraint firstItem="78O-Bo-NUu" firstAttribute="leading" secondItem="Xao-e2-1kD" secondAttribute="trailing" constant="8" id="zj8-AK-Ym7"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="avatar" destination="78O-Bo-NUu" id="cw2-O9-IxY"/>
+                                            <outlet property="descriptionLabel" destination="aVV-12-EYP" id="ZgD-A8-Qz5"/>
+                                            <outlet property="name" destination="Xao-e2-1kD" id="jUT-u6-ycd"/>
+                                            <outlet property="owner" destination="4up-FF-uH2" id="DCm-oM-VcJ"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="rmI-NW-EuD" id="pYm-Ku-6IW"/>
+                                    <outlet property="delegate" destination="rmI-NW-EuD" id="ikY-Is-QLe"/>
+                                </connections>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NsN-JY-buE">
-                                <rect key="frame" x="0.0" y="44" width="414" height="41"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Repositories found: 30" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NsN-JY-buE">
+                                <rect key="frame" x="0.0" y="44" width="414" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="KB5-lE-XYg"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
+                                <size key="shadowOffset" width="0.0" height="0.0"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="pDx-0q-2Lg"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="NsN-JY-buE" firstAttribute="top" secondItem="pDx-0q-2Lg" secondAttribute="top" id="1ZU-Xy-Jd2"/>
+                            <constraint firstItem="9VP-gB-la2" firstAttribute="bottom" secondItem="pDx-0q-2Lg" secondAttribute="bottom" id="3RT-JD-GSk"/>
+                            <constraint firstItem="NsN-JY-buE" firstAttribute="leading" secondItem="pDx-0q-2Lg" secondAttribute="leading" id="6i0-Fb-Jla"/>
+                            <constraint firstItem="9VP-gB-la2" firstAttribute="trailing" secondItem="NsN-JY-buE" secondAttribute="trailing" id="Djm-SU-Pok"/>
+                            <constraint firstItem="9VP-gB-la2" firstAttribute="top" secondItem="NsN-JY-buE" secondAttribute="bottom" id="Far-ko-Og0"/>
+                            <constraint firstItem="NsN-JY-buE" firstAttribute="trailing" secondItem="pDx-0q-2Lg" secondAttribute="trailing" id="Fu8-Ok-kZG"/>
+                            <constraint firstItem="9VP-gB-la2" firstAttribute="leading" secondItem="NsN-JY-buE" secondAttribute="leading" id="IwF-aW-aIu"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Repositories" id="7sq-GP-kTW"/>
+                    <connections>
+                        <outlet property="repositoriesFound" destination="NsN-JY-buE" id="9uX-wd-E3n"/>
+                        <outlet property="tableRepositories" destination="9VP-gB-la2" id="fxe-GH-JGf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PnI-ty-2Mx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
