Создание WKWebViewViewController для отображения страницы автора репозитория

--- a/networking/Base.lproj/Main.storyboard
+++ b/networking/Base.lproj/Main.storyboard
@@ -308,6 +308,22 @@
             </objects>
             <point key="canvasLocation" x="2492.753623188406" y="79.891304347826093"/>
         </scene>
+        <!--Web View View Controller-->
+        <scene sceneID="eMX-HN-KhR">
+            <objects>
+                <viewController storyboardIdentifier="WKWebViewViewController" id="xxt-Ge-3Ek" customClass="WKWebViewViewController" customModule="networking" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Wac-ja-Wik">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Yro-c6-VKU"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="MH0-jt-88B"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cYM-CZ-RXT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3328.985507246377" y="79.891304347826093"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="8Ea-j5-l1W">
             <objects>
