Реализовал использование TouchID для авторизации на GitHub

--- a/gitHubClient/Base.lproj/Main.storyboard
+++ b/gitHubClient/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter your token..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2g6-he-WlI">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter your login or token..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2g6-he-WlI">
                                 <rect key="frame" x="77" y="454" width="260" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="eUK-aQ-u75"/>
@@ -54,14 +54,14 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Mg0-gE-4Un">
-                                <rect key="frame" x="30" y="138" width="354" height="218"/>
+                                <rect key="frame" x="30" y="93" width="354" height="218"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="354" id="BhK-DI-MN6"/>
                                     <constraint firstAttribute="height" constant="218" id="hiq-em-Q3c"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="http status code: 401" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UIU-ag-zgj">
-                                <rect key="frame" x="37" y="388" width="340" height="48"/>
+                                <rect key="frame" x="37" y="327" width="340" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="8mb-0F-ca7"/>
                                     <constraint firstAttribute="width" constant="340" id="nKv-un-Z33"/>
@@ -70,24 +70,33 @@
                                 <color key="textColor" systemColor="systemRedColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZTh-qi-NdG">
+                                <rect key="frame" x="310" y="686" width="79" height="30"/>
+                                <state key="normal" title="Delete user"/>
+                                <connections>
+                                    <action selector="deletePasswordTapHandlerWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="o1p-RN-luK"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemGray2Color"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ZTh-qi-NdG" secondAttribute="bottom" constant="20" id="1es-uH-eD9"/>
+                            <constraint firstItem="UIU-ag-zgj" firstAttribute="top" secondItem="Mg0-gE-4Un" secondAttribute="bottom" constant="16" id="2AR-hF-xqx"/>
                             <constraint firstItem="wsg-Sp-qJF" firstAttribute="top" secondItem="2g6-he-WlI" secondAttribute="bottom" constant="32" id="7kZ-BI-V58"/>
                             <constraint firstItem="oR8-LP-1A8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BHg-vK-qTr"/>
-                            <constraint firstItem="2g6-he-WlI" firstAttribute="top" secondItem="UIU-ag-zgj" secondAttribute="bottom" constant="18" id="EbI-Af-W8f"/>
                             <constraint firstItem="2g6-he-WlI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FC2-xD-0JB"/>
                             <constraint firstItem="oR8-LP-1A8" firstAttribute="leading" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="77" id="FMZ-u1-n3m"/>
-                            <constraint firstItem="oR8-LP-1A8" firstAttribute="top" secondItem="Mg0-gE-4Un" secondAttribute="bottom" constant="32" id="M7u-VI-QQz"/>
                             <constraint firstItem="2g6-he-WlI" firstAttribute="leading" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="77" id="Mm0-Zo-Xb8"/>
-                            <constraint firstItem="Mg0-gE-4Un" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="94" id="UVy-cO-sEN"/>
+                            <constraint firstItem="Mg0-gE-4Un" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="49" id="UVy-cO-sEN"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="oR8-LP-1A8" secondAttribute="trailing" constant="77" id="VMr-GY-5tk"/>
                             <constraint firstItem="UIU-ag-zgj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Vyp-Cy-fEa"/>
                             <constraint firstItem="2g6-he-WlI" firstAttribute="top" secondItem="oR8-LP-1A8" secondAttribute="bottom" constant="32" id="WjO-GX-xc2"/>
+                            <constraint firstItem="oR8-LP-1A8" firstAttribute="top" secondItem="UIU-ag-zgj" secondAttribute="bottom" constant="13" id="Ydd-kv-W0O"/>
                             <constraint firstItem="wsg-Sp-qJF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="f4D-Xu-g0q"/>
                             <constraint firstItem="Mg0-gE-4Un" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mNT-qR-5tr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2g6-he-WlI" secondAttribute="trailing" constant="77" id="vKp-pC-Xty"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZTh-qi-NdG" secondAttribute="trailing" constant="25" id="zX8-R5-e0U"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="QKu-lP-5lr"/>
